# moodmate

./: README.md  output.md  pyproject.toml
src/moodmate/: runner_config.py
